--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,14 @@
+html, body {
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	height: 100%;
+}
+
+body {
+	overflow: hidden;
+}
+
 #background
 {
   background-image: url(Plateau.png);
