--- a/css/question.css
+++ b/css/question.css
@@ -4,41 +4,15 @@ body
   overflow: hidden;
 }
 
-.push
-{
-  margin-top: 10%;
-  text-align: center;
-  font-family: 'Passion One', cursive;
-}
-
-.push .btn
-{
-  box-shadow: 0px 4px 7px -1px #a8a8a8;
-
-  display: block;
-  width: 30%;
-  margin: 0 auto 6% auto;
-  font-size: 25px;
-}
-
-.btn-glyphicon {
-    padding:8px;
-    background:#ffffff;
-    margin-right:4px;
-}
-/*.icon-btn {
-    padding: 1px 15px 3px 2px;
-    border-radius:50px;
-}*/
-
 .container {
-  background: #FFF;
+  background: #FFFFFF;
   visibility: hidden;
   position: absolute;
   left: 50%;
   top: 50%;
   width: 400px;
-  height: 600px;
+  height: 150px;
   margin-left: -200px;
-  margin-top: -300px;
+  margin-top: -100px;
+  text-align: center;
 }
