--- a/css/style.css
+++ b/css/style.css
@@ -11,36 +11,39 @@ body {
 
 #background
 {
-  background-image: url(Plateau.png);
+  background-image: url(quizerse.png);
   /*background-repeat: no-repeat;*/
-  width: 100%;
+  /*width: 100%;
+	height: auto;*/
 }
 
 .push
 {
   margin-top: 10%;
-  text-align: center;
-  font-family: 'Passion One', cursive;
+  /*font-family: 'Passion One', cursive;*/
+	font-family: 'Bowlby One', cursive;
 }
 
 .push .btn
 {
-  box-shadow: 0px 4px 7px -1px #a8a8a8;
+  box-shadow: 0px 4px 7px -1px #000000;
 
   display: block;
-  width: 30%;
+  width: 20%;
   margin: 0 auto 6% auto;
-  font-size: 25px;
+  font-size: 20px;
+	text-align: left;
+
 }
 
 .btn-glyphicon {
     padding:8px;
     background:#ffffff;
-    margin-right:4px;
+    /*margin-right:75px;*/
 }
 .icon-btn {
     padding: 1px 15px 3px 2px;
-    border-radius:50px;
+    border-radius:10px;
 }
 
 h1
