--- a/css/style.css
+++ b/css/style.css
@@ -9,23 +9,21 @@ body {
 	overflow: hidden;
 }
 
-#background
-{
-  background-image: url(quizerse.png);
-  /*background-repeat: no-repeat;*/
+#background {
+  background: url(quizerse.png);
+  background-repeat: no-repeat;
+    background-size: cover;
   /*width: 100%;
 	height: auto;*/
 }
 
-.push
-{
+.push {
   margin-top: 10%;
   /*font-family: 'Passion One', cursive;*/
 	font-family: 'Bowlby One', cursive;
 }
 
-.push .btn
-{
+.push .btn {
   box-shadow: 0px 4px 7px -1px #000000;
 
   display: block;
