--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,128 @@
 
 /* -------------------------------------------------------- */
 
+@keyframes slideInFromRight {
+  0% {
+    transform: translateX(+100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@-moz-@keyframes slideInFromRight {
+  0% {
+    transform: translateX(+100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@-webkit-@keyframes slideInFromRight {
+  0% {
+    transform: translateX(+100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@-ms-@keyframes slideInFromRight {
+  0% {
+    transform: translateX(+100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@-o-@keyframes slideInFromRight {
+  0% {
+    transform: translateX(+100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+/* -------- */
+@keyframes slideInFromBottom {
+  0% {
+    transform: translateY(+100%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@-moz-@keyframes slideInFromBottom {
+  0% {
+    transform: translateY(+100%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@-webkit-@keyframes slideInFromBottom {
+  0% {
+    transform: translateY(+100%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@-ms-@keyframes slideInFromBottom {
+  0% {
+    transform: translateY(+100%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@-o-@keyframes slideInFromBottom {
+  0% {
+    transform: translateY(+100%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* -------------------------------------------------------- */
+
 html, body {
 	margin: 0;
 	padding: 0;
@@ -22,14 +144,29 @@ html, body {
 
 body {
 	overflow: hidden;
+    background-color: black;
+}
+
+.btnf-acc {
+    animation: 1s ease-out 0s 1 slideInFromRight;
 }
 
 #background {
+    position: absolute;
   background: url(../images/bg-accueil2.png);
   background-repeat: no-repeat;
+    background-position: top;
     background-size: cover;
   /*width: 100%;
 	height: auto;*/
+    -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 2s; /* Firefox < 16 */
+        -ms-animation: fadein 2s; /* Internet Explorer */
+         -o-animation: fadein 2s; /* Opera < 12.1 */
+            animation: fadein 2s;
+    width: 100%;
+    height: 100%;
+    top: 0:
 }
 
 .push {
@@ -75,6 +212,7 @@ h2 {
     text-align: center;
     box-sizing: border-box;
     z-index: 5;
+    animation: 1s ease-out 0s 1 slideInFromBottom;
 }
 
 #table2, #table3, #table4 {
